[Agent] Add support for Java 11 and fix DEBUG options for Windows